# vTOC

./: .env.example  .gitignore  CONTRIBUTING.md  DEMO_DEPLOYMENT.md  LICENSE  Makefile  README.dev.md  README.md  docker-compose.yml  docker-stack.yml  fly.toml  index.html  mkdocs.yml  mypy.ini  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.devcontainer.yml
.github/: WORKFLOW_AUDIT_RESULTS.md  copilot-instructions.md
agents/: Dockerfile  __init__.py  agent_service.py  requirements.txt
alembic/: env.py  script.py.mako
backend/: Dockerfile  README.md  alembic.ini  requirements.dev.txt  requirements.runtime.txt  requirements.txt
backlog/: backlog.yaml
codex/: README.md  backlog.json
components/: Layout.tsx  Map.tsx  MissionConsole.tsx  Timeline.tsx
database/: .env.example
demo/: 404.html  index.html
docs/: ADSB.md  API.md  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  DIAGRAMS.md  GPS.md  H4M.md  HARDWARE.md  IMPLEMENTATION_SUMMARY.md  INTERACTIVE_FEATURES.md  POI-IMEI.md  QUICKSTART.md  SETUP.md  TELEMETRY_CONNECTORS.md  backlog.md  development.md  index.md  requirements.txt  secret-management.md  spec-kit-migration.md  stage-branch-setup.md
frontend/: .env.example  .eslintrc.cjs  Dockerfile  README.md  index.html  nginx.conf  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
infrastructure/: README-infra.md  README.md  main.tf  outputs.tf  provider.tf  terraform.tfvars.example  variables.tf  versions.tf
lib/: data.ts  time.ts  types.ts  utils.ts
mermaid/: architecture.mmd  ci-sequence.mmd  er.mmd  flowchart.mmd
pages/: 404.tsx  README.md  _app.tsx  index.tsx
services/gps-ingest/: Dockerfile  README.md  pyproject.toml
services/gps-ingest/gps_ingest/: __init__.py  __main__.py  config.py  parser.py  service.py
services/gps-ingest/tests/: test_parser.py  test_retry.py
services/rf-engine/: Dockerfile  README.md  pyproject.toml
services/rf-engine/rfengine/: __init__.py  config.py  main.py
services/rf-engine/rfengine/archive/: __init__.py
services/rf-engine/rfengine/capture/: __init__.py  sigmf.py
services/rf-engine/rfengine/classify/: __init__.py
services/rf-engine/rfengine/devices/: __init__.py  manager.py  router.py
services/rf-engine/rfengine/protocols/: __init__.py
services/rf-engine/rfengine/replay/: __init__.py
services/rf-engine/rfengine/telemetry/: __init__.py
services/rf-engine/rfengine/ws/: __init__.py
services/rf-engine/tests/: test_config.py  test_devices.py  test_main.py  test_sigmf.py
(+357 files in other folders)
