[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "prcybr-rf-engine"
version = "0.1.0"
description = "FISSURE-class RF engine for vTOC (clean-room implementation, MIT licensed)"
authors = ["PR-CYBR vTOC Team"]
readme = "README.md"
license = "MIT"
packages = [{include = "rfengine"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
numpy = "^1.26.0"
scipy = "^1.11.0"
# GNU Radio and SDR dependencies (installed via apt in Dockerfile)
# gnuradio = "3.10.*"  # Installed via apt-get in container
# SoapySDR = "*"       # Installed via apt-get in container
python-dotenv = "^1.0.0"
websockets = "^12.0"
aiofiles = "^23.2.1"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
prometheus-client = "^0.19.0"
loguru = "^0.7.2"
httpx = "^0.26.0"
# Optional ML dependencies
onnxruntime = {version = "^1.16.0", optional = true}
torch = {version = "^2.1.0", optional = true}
# Protocol support
crcmod = "^1.7"
bitstring = "^4.1.0"
# SigMF support (pure Python implementation)
sigmf = {version = "^1.2.0", optional = true}

[tool.poetry.extras]
ml = ["onnxruntime", "torch"]
sigmf = ["sigmf"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
httpx = "^0.26.0"
ruff = "^0.1.0"
mypy = "^1.7.0"
black = "^23.11.0"

[tool.poetry.scripts]
rf-engine = "rfengine.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["rfengine"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py311"]
